<resources>
    <string name="app_name">Project2</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="new_user_sign_up_here">New user? Sign up here</string>
    <string name="logout">Logout</string>
    <string name="logo_text">logo text</string>
    <string name="view_cart">View Cart</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="taxes_hst_15_0_00">Taxes (HST 15%): $0.00</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="amount_to_pay_0_00">Amount to Pay: $0.00</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="payment_information">Payment Information</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="name_on_card">Name on Card</string>
    <string name="place_order">Place Order</string>
    <string name="cartify">cartify</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="product_description_fiiller_text_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx">Product Description FIiller Text XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="_0_00">$0.00</string>
    <string name="quantity_1">Quantity: 1</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="thank_you_your_order_has_been_placed">Thank you! Your order has been placed!</string>
    <string name="Z0_00">$0.00</string>
    <string name="quantity_0">Quantity: 0</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
</resources>